@@ -11,6 +11,10 @@ module Gluon
   autoload :Dispatcher, 'gluon/dispatcher'
   autoload :ERBContext, 'gluon/po'
   autoload :PresentationObject, 'gluon/po'
+  autoload :MemoryStore, 'gluon/rs'
+  autoload :SessionNotFoundError, 'gluon/rs'
+  autoload :SessionManager, 'gluon/rs'
+  autoload :SessionHandler, 'gluon/rs'
   autoload :RequestResponseContext, 'gluon/rs'
   autoload :Setup, 'gluon/setup'
   autoload :ViewRenderer, 'gluon/renderer'
